# agentic-learning

./: .env.example  README.md
chroma_db/: chroma.sqlite3
day_1/: README.md
day_1/task_1/: README.md  main.py
day_10/task_10/: README.md  main.py
day_10/task_10/output/: event_engagement_analysis_20250813_142847.md  (+1 more)
day_11/task_11/: README.md  pyproject.toml
day_11/task_11/output/: latex_correction_report.md
day_11/task_11/src/task_11/: crew.py  main.py
day_11/task_11/src/task_11/config/: agents.yaml  tasks.yaml
day_11/task_11/src/task_11/tools/: custom_tool.py
day_11/task_12/: README.md  pyproject.toml
day_11/task_12/output/: music_learning_plan.md
day_11/task_12/src/task_12/: crew.py  main.py
day_11/task_12/src/task_12/config/: agents.yaml  tasks.yaml
day_11/task_12/src/task_12/tools/: custom_tool.py
day_12/task_13/: README.md  main.py
day_12/task_14/: README.md  main.py  requirements.txt
day_12/task_15/: README.md  main.py  requirements.txt
day_12/task_16/: README.md  main.py  requirements.txt
day_12/task_17/: README.md  main.py  requirements.txt
day_2/: README.md
day_2/output/: README.md
day_2/task_1/: README.md  main.py  rag.ipynb  requirements.txt
day_2/task_2/: rag.ipynb
day_4/task_3/: .env  README.md  main.py  requirements.txt
day_5/task_4/: README.md  main.ipynb
day_6/task_5/: README.md  main.py  requirements.txt
day_7/task_2_architecture/: README.md
day_7/task_4_architecture/: README.md
day_8/task_7/: README.md  main.py
day_9/task_8/: README.md  main.py
day_9/task_9/: README.md  main.py
(+10 files in other folders)
