[project]
name = "task_11"
version = "0.1.0"
description = "task_11 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
task_11 = "task_11.main:run"
run_crew = "task_11.main:run"
train = "task_11.main:train"
replay = "task_11.main:replay"
test = "task_11.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
