[project]
name = "task_12"
version = "0.1.0"
description = "task_12 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
task_12 = "task_12.main:run"
run_crew = "task_12.main:run"
train = "task_12.main:train"
replay = "task_12.main:replay"
test = "task_12.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
